cocos2d-x-3.0rc0 Feb.?? 2014
[All]
     [NEW]          Adds Dutch Language support.

     [FIX]          EGLView improvements: renamed to GLView, no longer a singleton, easier to customize
     [FIX]          Removes samples except testcpp|testjavascript|testlua. Moves sample games to `cocos2d/samples` repo.

cocos2d-x-3.0beta2 Jan.24 2014
[All]
     [NEW]          Full screen support for desktop platforms.
     [NEW]          Adds performance test for EventDispatcher.
     [NEW]          Adds performance test for Containers(Vector<>, Array, Map<K,V>, Dictionary).
     [NEW]          DrawNode supports to draw triangle, quad bezier, cubic bezier.
     [NEW]          Console: added the 'textures', 'fileutils dump' and 'config' commands
     [NEW]          GLCache: glActiveTexture() is cached with GL::activeTexture(). All code MUST call the cached version in order to work correctly
     [NEW]          Label: Uses a struct of TTF configuration for Label::createWithTTF to reduce parameters and make this interface more easily to use.
     [NEW]          Label: Integrates LabelAtlas into new Label.
     [NEW]          Node: Added `setGlobalZOrder()`. Useful to change the Node's render order. Node::setZOrder() -> Node::setLocalZOrder()
     [NEW]          Renderer: Added BatchCommand. This command is not "batchable" with other commands, but improves performance in about 10%
     
     [FIX]          event->stopPropagation can't work for EventListenerTouchAllAtOnce.
     [FIX]          Uses unified `desktop/CCEGLView.h/cpp` for desktop platforms (windows, mac, linux).
     [FIX]          Bindings-generator supports Windows again and remove dependency of LLVM since we only need binary(libclang.so/dll).
     [FIX]          Removes unused files for MAC platform after using glfw3 to create opengl context.
     [FIX]          Wrong arithmetic of child's position in ParallaxNode::addChild()
     [FIX]          CocoStudio: TestColliderDetector in ArmatureTest can't work.